--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,23 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.min.css')    
+    link(rel='stylesheet', href='/stylesheets/bootstrap/customBootstrap.css')
   body
+    div(class="container")
+      div(class="navbar")
+        div(class="navbar-inner")
+            ul(class="nav")
+              li
+                a(href="/") Home
+              li
+                a(href="/record") Track Records
+              li
+                a(href="/about") About Us
+
+      div(class="container-fluid")    
+  
+   
     block content
     
     
