--- a/public/stylesheets/bootstrap/customBootstrap.css
+++ b/public/stylesheets/bootstrap/customBootstrap.css
@@ -1,5 +1,21 @@
 /*Cutomize some of the set-up in bootstrap.css; for general layout*/
 
+.todayDoses{
+	text-align:center;
+}
+
+.todayDoses td{
+	 padding:5px;
+}
+
+.dosageList{
+	margin-bottom:0px;
+}
+
+#drug .control-label{
+	float: left;
+}
+
 .container{
 	width: 100%;
 }
@@ -55,7 +71,7 @@ i {
   margin-left: -30px;
   font-size: 16px;
   font-weight: 200;
-  color: #777;
+  color: #000000;
   text-shadow: 0 1px 0 #fff;
 }
 
