--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,9 +13,10 @@ html
               li
                 a(href="/") Home
               li
-                a(href="/record") Track Records
+                a(href="/record") Track Records                
               li
                 a(href="/about") About Us
+            a(class="brandRight",id="userName") #{patientName}
 
       div(class="container-fluid")    
   
