--- a/views/index.jade
+++ b/views/index.jade
@@ -16,9 +16,17 @@ block content
       div(class="span6")
           h2 Today Doses
           table.todayDoses
+    br
+    div(class="row-fluid mainCenter")
+      div(class="span7 offset2")
+        h3(class="center") Past Week Drug Taking Record
+        table(class="table drugTakingRecord")
+          tbody
             
   <!--Script-->
   script(src="/js/lib/jquery-min.js")
   script(src="/js/lib/common.js")
+
+  
       
   
