--- a/views/about.jade
+++ b/views/about.jade
@@ -1,4 +1,6 @@
 extends layout
 
 block content
-  If you have any questions, please email johnny5550822@gmail.com
+  div(class="container-fluid mainCenter")
+    div(class="row-fluid")
+      div(class="span8") If you have any questions, please email johnny5550822@gmail.com
