Add additional feature

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+  div(id="alertNotice")
+    
   div(class="container-fluid mainCenter")
     div(class="row-fluid")
       div(class="span3 offset3")
