--- a/views/index.jade
+++ b/views/index.jade
@@ -19,11 +19,17 @@ block content
           h2 Today Doses
           table.todayDoses
     br
+    a(id="drugRecord")
     div(class="row-fluid mainCenter")
       div(class="span7 offset2")
         h3(class="center") Past Week Drug Taking Record
         table(class="table drugTakingRecord")
           tbody
+    br
+    a(id="about")  
+    div(class="container-fluid mainCenter")
+      div(class="row-fluid")
+        div(class="span8") If you have any questions, feel free to ask any of us!:)
             
   <!--Script-->
   script(src="/js/lib/jquery-min.js")
