--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,9 +13,9 @@ html
               li
                 a(href="/") Home
               li
-                a(href="/record") Track Records                
+                a(href="#drugRecord") Track Records                
               li
-                a(href="/about") About Us
+                a(href="#about") About Us
             a(class="brandRight",id="userName") #{patientName}   
       block content
     
