--- a/public/js/view/template/dosageVerification-template.html
+++ b/public/js/view/template/dosageVerification-template.html
@@ -4,7 +4,7 @@
     <button class='btn <%=buttonType%>' data-toggle="collapse" data-target="#<%=doseNo%>" name=<%=doseNo%>><%=content%></button>
   </td>
   <td> 
-    <div id="<%=doseNo%>" class="collapse"> 
+    <div id="<%=doseNo%>" class="in collapse"> 
     <table class="table table-striped table-hover dosageList">
       <td><%=doses%></td>
     </table>
