Finalize the project: Editted comments, refractured and polished some codes, and add the database dump.

--- a/public/stylesheets/bootstrap/customBootstrap.css
+++ b/public/stylesheets/bootstrap/customBootstrap.css
@@ -1,4 +1,4 @@
-/*Cutomize some of the set-up in bootstrap.css; for general layout*/
+/*Cutomize some of the set-up in bootstrap.css; for general layout. You can take a look for your reference*/
 
 .todayDoses{
 	text-align:center;
