--- a/views/index.jade
+++ b/views/index.jade
@@ -29,7 +29,7 @@ block content
     a(id="about")  
     div(class="container-fluid mainCenter")
       div(class="row-fluid")
-        div(class="span8") If you have any questions, feel free to ask any of us!:)
+        div(class="span8") If you have any questions, feel free to email: johnny5550822@gmail.com :)
             
   <!--Script-->
   script(src="/js/lib/jquery-min.js")
