--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,6 @@ doctype 5
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.min.css')    
     link(rel='stylesheet', href='/stylesheets/bootstrap/customBootstrap.css')
   body
@@ -15,7 +14,7 @@ html
               li
                 a(href="#drugRecord") Track Records                
               li
-                a(href="#about") About Us
+                a(href="#about") About
             a(class="brandRight",id="userName") #{patientName}   
       block content
     
